// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitCommitNodeByline author (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline author 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline different author and committer (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       authored and commited by 
      <a
        class="font-weight-bold"
        data-state="closed"
        href="https://example.com/bobyang"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        bYang
      </a>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline different author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       authored and commited by 
      <a
        class="font-weight-bold"
        data-state="closed"
        href="https://example.com/bobyang"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        bYang
      </a>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline omit GitHub committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline same author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        data-state="closed"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      committed by 
      <span
        class="font-weight-bold"
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          User:
        </span>
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
        data-state="closed"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;
